FALTANTES: - Botón Foto y código Tomar Foto - Botón Noticia y WebView - Formato y Diseño kk - Modificar SPLASH, logo y launcher

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+
+
+
+    <item android:id="@+id/action_ajustes"
+        android:title="Ajustes"
+        android:icon="@drawable/settings"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/action_configuracion"
+        android:icon="@drawable/ic_action_help"
+        app:showAsAction="collapseActionView"
+        android:title="Ajustes" />
+    <item
+        android:id="@+id/action_salir"
+        android:icon="@drawable/ic_action_help"
+        app:showAsAction="collapseActionView"
+        android:title="Salir" />
+
 </menu>
