--- a/app/src/main/res/layout/fragment_main_activity.xml
+++ b/app/src/main/res/layout/fragment_main_activity.xml
@@ -29,7 +29,13 @@
                     android:id="@+id/tab4"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical" />
+                    android:orientation="vertical" >
+
+                    <WebView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/webViewNoticia" />
+                </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/tab1"
