--- a/app/src/main/res/layout/fragment_main_activity.xml
+++ b/app/src/main/res/layout/fragment_main_activity.xml
@@ -23,7 +23,8 @@
             <FrameLayout
                 android:id="@android:id/tabcontent"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@drawable/fondo">
 
                 <LinearLayout
                     android:id="@+id/tab3"
@@ -31,12 +32,21 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
+                    <ImageButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/bFoto"
+                        android:background="@android:color/transparent"
+                        android:src="@drawable/btnfoto"
+                        android:layout_gravity="center_horizontal" />
+
                     <Button
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Tomar Foto"
-                        android:id="@+id/bFoto"
-                        android:layout_gravity="center_horizontal" />
+                        android:text="COMPARTIR"
+                        android:id="@+id/btnShare"
+                        android:singleLine="false"
+                        android:layout_gravity="right" />
 
                     <ImageView
                         android:layout_width="match_parent"
@@ -46,44 +56,28 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/tab4"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical" >
-
-                    <WebView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:id="@+id/webViewNoticia" />
-                </LinearLayout>
-
-                <LinearLayout
                     android:id="@+id/tab1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:weightSum="1">
 
-                    <Button
+                    <ImageButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Muestra Tu Ubicación"
-                        android:id="@+id/bmaps"
-                        android:layout_gravity="center_horizontal" />
-
-                    <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="SOS"
                         android:id="@+id/btnSOS"
-                        android:layout_gravity="center_horizontal" />
-
-                    <WebView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/parrafo_1"
+                        android:background="@android:color/transparent"
+                        android:src="@drawable/btnsos"
                         android:layout_gravity="center_horizontal"
-                        android:layout_weight="0.95" />
+                        android:layout_weight="0.5" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/imageView"
+                        android:layout_weight="0.5"
+                        android:src="@drawable/anunciovoz"
+                        android:layout_gravity="center_horizontal" />
 
                 </LinearLayout>
 
@@ -93,11 +87,22 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <Button
+                    <ImageButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Ayuda SMS"
                         android:id="@+id/bSMS"
+                        android:background="@android:color/transparent"
+                        android:src="@drawable/btnsms"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_weight="0.5"
+                        android:layout_marginTop="10dp" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/imageView2"
+                        android:layout_weight="0.5"
+                        android:src="@drawable/anunciosms"
                         android:layout_gravity="center_horizontal" />
 
                     <Button
@@ -112,6 +117,18 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/textResult"
                         android:layout_gravity="center_horizontal" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/tab4"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical" >
+
+                    <WebView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/webViewNoticia" />
                 </LinearLayout>
 
             </FrameLayout>
