--- a/app/src/main/res/layout/fragment_main_activity.xml
+++ b/app/src/main/res/layout/fragment_main_activity.xml
@@ -27,6 +27,47 @@
                 android:background="@drawable/fondo">
 
                 <LinearLayout
+                    android:id="@+id/tab2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <ImageButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/bSMS"
+                        android:background="@android:color/transparent"
+                        android:src="@drawable/btnsms"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_weight="0.5"
+                        android:layout_marginTop="10dp" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/imageView2"
+                        android:layout_weight="0.5"
+                        android:src="@drawable/anunciosms"
+                        android:layout_gravity="center_horizontal" />
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=" Ver Historial "
+                        android:id="@+id/bHistorial"
+                        android:layout_gravity="center_horizontal"
+                        android:textStyle="bold"
+                        android:background="#ffc912"
+                        android:textColor="#010101" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textResult"
+                        android:layout_gravity="center_horizontal" />
+                </LinearLayout>
+
+                <LinearLayout
                     android:id="@+id/tab3"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -69,44 +110,6 @@
                         android:layout_height="match_parent"
                         android:id="@+id/imageViewPhoto" />
 
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/tab2"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                    <ImageButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/bSMS"
-                        android:background="@android:color/transparent"
-                        android:src="@drawable/btnsms"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_weight="0.5"
-                        android:layout_marginTop="10dp" />
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/imageView2"
-                        android:layout_weight="0.5"
-                        android:src="@drawable/anunciosms"
-                        android:layout_gravity="center_horizontal" />
-
-                    <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Ver Historial"
-                        android:id="@+id/bHistorial"
-                        android:layout_gravity="center_horizontal" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/textResult"
-                        android:layout_gravity="center_horizontal" />
                 </LinearLayout>
 
                 <LinearLayout
